--- a/examples/kubernetes/cilium.yaml
+++ b/examples/kubernetes/cilium.yaml
@@ -87,7 +87,7 @@ spec:
     spec:
       serviceAccountName: cilium
       containers:
-      - image: cilium/cilium:stable
+      - image: cilium/cilium:k8s-ingress-default-deny
         imagePullPolicy: Always
         name: cilium-agent
         command: [ "cilium-agent" ]
