--- a/examples/kubernetes/1.8/cilium-ds.yaml
+++ b/examples/kubernetes/1.8/cilium-ds.yaml
@@ -34,7 +34,7 @@ spec:
       serviceAccountName: cilium
       containers:
       - image: cilium/cilium:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: cilium-agent
         command: [ "cilium-agent" ]
         args:
