--- a/examples/kubernetes/1.8/cilium.yaml
+++ b/examples/kubernetes/1.8/cilium.yaml
@@ -79,7 +79,7 @@ spec:
       serviceAccountName: cilium
       containers:
       - image: cilium/cilium:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: cilium-agent
         command: [ "cilium-agent" ]
         args:
